POWR-643 Update service teaser style

--- a/web/themes/custom/cloudy/scss/_components.scss
+++ b/web/themes/custom/cloudy/scss/_components.scss
@@ -19,6 +19,7 @@
 @import "components/_tables";
 @import "components/_tablesort-indicator";
 @import "components/_tabs";
+@import "components/_teaser";
 @import "components/_textarea";
 @import "components/_user";
 @import "components/_vertical-tabs.component";
