--- a/web/themes/custom/cloudy/scss/_overrides.scss
+++ b/web/themes/custom/cloudy/scss/_overrides.scss
@@ -18,7 +18,7 @@ p {
   line-height: $line-height-lg;
   &:not(:last-child) {
     margin-bottom: $spacer * 1.5;
-  } 
+  }
   &.lead {
     color: $gray-600;
     margin-bottom: $spacer * 2;
@@ -283,7 +283,7 @@ td .form-check-input {
   margin-right: 1rem;
 }
 
-.form-inline .form-actions, 
+.form-inline .form-actions,
 .container-inline .form-actions {
   align-items: bottom !important;
 }
@@ -368,7 +368,7 @@ span.mailto::before {
   padding-right: 0;
 }
 
-h2, h3, h4, h5, h6, p, blockquote, hr, .list-group-item, .paragraph ul, .paragraph ol, .figure-caption {
+h2, h3, h4, h5, h6, p, blockquote, hr, .list-group-item, .paragraph ul, .paragraph ol, .figure-caption, .teaser__tags {
   max-width: 729px;
 }
 
