--- a/web/themes/custom/cloudy/templates/content/city-service/node--city-service--teaser.html.twig
+++ b/web/themes/custom/cloudy/templates/content/city-service/node--city-service--teaser.html.twig
@@ -59,13 +59,39 @@
  * @see template_preprocess_node()
  */
 #}
-<div{{ attributes.addclass('mb-5') }}>
-  {{ title_prefix }}
-  <h2>
-    <a href="{{ url }}" rel="bookmark">{{ label }}</a>
-  </h2>
-  {{ title_suffix }}
-  <div{{ content_attributes }}>
-    {{ content }}
+<div class="teaser">
+  <h3{{title_attributes}}>
+    <a href="{{ url }}" rel="bookmark">
+      {{ label }}</a>
+  </h3>
+  <div{{content_attributes}}>
+    {{ content.field_summary }}
   </div>
+  {% if node.field_topics.value or node.field_community_actions.value %}
+    <div{{attributes.addClass('teaser__tags')}}>
+      <span class="sr-only">Tagged in</span>
+      {% spaceless %}
+        {% for i, topic in node.field_topics %}
+          {% if node.field_topics[i].entity %}
+            {% set topic = {
+                url: path('entity.taxonomy_term.canonical', {'taxonomy_term': node.field_topics[i].entity.id}),
+                title: node.field_topics[i].entity.name.value,
+              }%}
+            <a href="{{ topic.url }}" class="teaser__tag">
+              {{ topic.title }}</a>
+          {% endif %}
+        {% endfor %}
+        {% for i, action in node.field_community_actions %}
+          {% if node.field_community_actions[i].entity %}
+            {% set action = {
+                url: path('entity.taxonomy_term.canonical', {'taxonomy_term': node.field_community_actions[i].entity.id}),
+                title: node.field_community_actions[i].entity.name.value,
+              }%}
+            <a href="{{ action.url }}" class="teaser__tag">
+              {{ action.title }}</a>
+          {% endif %}
+        {% endfor %}
+      {% endspaceless %}
+    </div>
+  {% endif %}
 </div>
