POWR-662 - added logic to not display caption if image/video/audio is not displayed

--- a/web/themes/custom/cloudy/templates/paragraphs/paragraph--image.html.twig
+++ b/web/themes/custom/cloudy/templates/paragraphs/paragraph--image.html.twig
@@ -1,9 +1,11 @@
 {% extends 'paragraph.html.twig' %}
 {% block content %}
+{% if content.field_image.0 %}
 <figure class="figure">
   {{ content }}
   <figcaption class="figure-caption text-center">
     {{ paragraph.field_caption.value }}
   </figcaption>
 </figure>
+{% endif %}
 {% endblock %}
