POWR-643 Update teasers, add audience tag

--- a/web/themes/custom/cloudy/scss/components/_teaser.scss
+++ b/web/themes/custom/cloudy/scss/components/_teaser.scss
@@ -2,7 +2,8 @@
   @extend .mb-5;
   @extend .d-flex;
   @extend .flex-column;
-  h2, h3 {
+  h2,
+  h3 {
     font-weight: $font-weight-semibold;
     a {
       color: $dark;
@@ -12,8 +13,10 @@
     }
   }
   &__tag {
-    @extend .small;
+    display: inline-block;
     margin-right: $spacer;
+
+    @extend .small;
     &:last-child {
       margin-right: 0;
     }
