--- a/web/themes/custom/cloudy/templates/content/vocabularies/taxonomy-term--audience.html.twig
+++ b/web/themes/custom/cloudy/templates/content/vocabularies/taxonomy-term--audience.html.twig
@@ -62,17 +62,17 @@
 <div class="teaser">
   <h3 class="order-2">
     <a href="{{ url }}" rel="bookmark">
-      {{ label }}</a>
+      {{ name.0 }}</a>
   </h3>
-  {% if node.field_summary.value %}
+  {% if content.description | render | trim  is not empty %}
     <div class="order-3">
-      <p>{{ node.field_summary.value }}</p>
+      {{ content.description.0 }}
     </div>
   {% endif %}
-  {% if node.type.entity.label %}
+  {% if term.bundle %}
     <span class="badge badge-pill badge-light mb-1 order-1 align-self-start">
       <span class="sr-only">Type is</span>
-      {{ node.type.entity.label }}</span>
+      {{ term.bundle | replace({'_': ' '}) }}</span>
   {% endif %}
   {% if node.field_topics.value or node.field_audience.value %}
     {% spaceless %}
