--- a/web/themes/custom/cloudy/templates/content/information/node--information--search-result.html.twig
+++ b/web/themes/custom/cloudy/templates/content/information/node--information--search-result.html.twig
@@ -60,22 +60,24 @@
  */
 #}
 <div class="teaser">
-  <h3{{title_attributes}} class="order-2">
+  <h3 class="order-2">
     <a href="{{ url }}" rel="bookmark">
       {{ label }}</a>
   </h3>
-  <div{{content_attributes}} class="order-3">
-    {{ content.field_summary }}
-  </div>
+  {% if node.field_summary.value %}
+    <div class="order-3">
+      <p>{{ node.field_summary.value }}</p>
+    </div>
+  {% endif %}
   {% if node.type.entity.label %}
-    <a href="{{ url('view.services_index.page_1') }}" class="badge badge-pill badge-light mb-1 order-1 align-self-start">
+    <a class="badge badge-pill badge-light mb-1 order-1 align-self-start">
       <span class="sr-only">Type is</span>
       {{ node.type.entity.label }}</a>
   {% endif %}
-  {% if node.field_topics.value or node.field_community_actions.value %}
-    <div{{attributes.addClass('teaser__tags', 'order-4')}}>
-      <span class="sr-only">Tagged in</span>
-      {% spaceless %}
+  {% if node.field_topics.value or node.field_audience.value %}
+    {% spaceless %}
+      <div{{attributes.addClass('teaser__tags','order-4')}}>
+        <span class="sr-only">Tagged in</span>
         {% for i, topic in node.field_topics %}
           {% if node.field_topics[i].entity %}
             {% set topic = {
@@ -86,17 +88,17 @@
               {{ topic.title }}</a>
           {% endif %}
         {% endfor %}
-        {% for i, action in node.field_community_actions %}
-          {% if node.field_community_actions[i].entity %}
-            {% set action = {
-                url: path('entity.taxonomy_term.canonical', {'taxonomy_term': node.field_community_actions[i].entity.id}),
-                title: node.field_community_actions[i].entity.name.value,
+        {% for i, audience in node.field_audience %}
+          {% if node.field_audience[i].entity %}
+            {% set audience = {
+                url: path('entity.taxonomy_term.canonical', {'taxonomy_term': node.field_audience[i].entity.id}),
+                title: node.field_audience[i].entity.name.value,
               }%}
-            <a href="{{ action.url }}" class="teaser__tag">
-              {{ action.title }}</a>
+            <a href="{{ audience.url }}" class="teaser__tag">
+              {{ audience.title }}</a>
           {% endif %}
         {% endfor %}
-      {% endspaceless %}
-    </div>
+      </div>
+    {% endspaceless %}
   {% endif %}
 </div>
