POWR-643 Update list and taxonomy page display modes

--- a/web/themes/custom/cloudy/templates/content/groups/group--bureau-office--teaser.html.twig
+++ b/web/themes/custom/cloudy/templates/content/groups/group--bureau-office--teaser.html.twig
@@ -1,17 +1,12 @@
 <div class="teaser">
-  <h3 class="order-2">
+  <h3>
     <a href="{{ url }}" rel="bookmark">
       {{ label }}</a>
   </h3>
-  {% if node.field_summary.value %}
-    <div class="order-3">
-      <p>{{ node.field_summary.value }}</p>
+  {% if content.field_summary %}
+    <div>
+      <p>{{ content.field_summary.0 }}</p>
     </div>
-  {% endif %}
-  {% if node.type.entity.label %}
-    <span class="badge badge-pill badge-light mb-1 order-1 align-self-start">
-      <span class="sr-only">Type is</span>
-      {{ node.type.entity.label }}</span>
   {% endif %}
   {% if node.field_topics.value or node.field_audience.value %}
     {% spaceless %}
