POWR-627-1 Clean up menu styles

--- a/web/themes/custom/cloudy/scss/_theme-variables.scss
+++ b/web/themes/custom/cloudy/scss/_theme-variables.scss
@@ -20,3 +20,7 @@ $font-weight-semibold: 600;
 
 $comment-spacer-x: 1.25em;
 $comment-spacer-y: 1.25em;
+
+
+$editor-toolbar-active-bg: #000;
+$main-menu-active-bg: darken($primary, 5%);
