--- a/web/themes/custom/cloudy/scss/components/_header.scss
+++ b/web/themes/custom/cloudy/scss/components/_header.scss
@@ -65,7 +65,7 @@
     color: $white;
   }
   .navbar-nav .nav-link {
-    padding: 1rem;
+    padding: 1.5rem 1rem;
     color: $white;
     @include links($white, $white, $white, $white);
   }
@@ -74,14 +74,17 @@
 @include media-breakpoint-up(lg) {
   .navbar {
     .navbar-nav .nav-link {
-      padding: 26.5px 1rem;
-      line-height: 27px;
+      min-height: 85px;
       transition: background-color 0.25s ease, font-size 0.25s ease;
       &:hover {
         background-color: rgba($black, 0.15);
       }
     }
   }
+}
+
+.menu--main .nav-item a.is-active {
+  background-color: $main-menu-active-bg;
 }
 
 .featured-top {
