--- a/web/themes/custom/cloudy/scss/components/_nav.scss
+++ b/web/themes/custom/cloudy/scss/components/_nav.scss
@@ -7,3 +7,14 @@
     font-weight: $font-weight-semibold;
   }
 }
+
+.menu--editor-toolbar .nav-item a.is-active{
+  background-color: $editor-toolbar-active-bg;
+}
+
+.menu--editor-toolbar .nav-item {
+  transition: background-color 0.25s ease, font-size 0.25s ease;
+      &:hover {
+        background-color: rgba($black, 0.15);
+      }
+}
