--- a/web/themes/custom/cloudy/templates/navigation/menu--editor-toolbar.html.twig
+++ b/web/themes/custom/cloudy/templates/navigation/menu--editor-toolbar.html.twig
@@ -1,7 +1,7 @@
 {#
 /**
  * @file
- * Bootstrap Barrio's override to display a menu.
+ * Override to display a menu.
  *
  * Available variables:
  * - menu_name: The machine name of the menu.
@@ -32,7 +32,7 @@
     {% if menu_level == 0 %}
       <ul{{ attributes.addClass('nav bg-dark') }}>
     {% else %}
-      <ul class="dropdown-menu nav bg-dark">
+      <ul{{ attributes.addClass('dropdown-menu') }}>
     {% endif %}
     {% for item in items %}
       {%
