--- a/web/themes/custom/cloudy/templates/block/block--system-branding-block.html.twig
+++ b/web/themes/custom/cloudy/templates/block/block--system-branding-block.html.twig
@@ -1,7 +1,6 @@
 {#
 /**
- * @file
- * Bootstrap Barrio's theme implementation for a branding block.
+ * @file Implementation for a branding block.
  *
  * Each branding element variable (logo, name, slogan) is only available if
  * enabled in the block configuration.
@@ -12,17 +11,16 @@
  * - site_slogan: Slogan for site as defined in Site information settings.
  */
 #}
-{% set attributes = attributes.addClass('site-branding') %}
-  {% if site_logo or site_name %}
-    <a href="{{ path('<front>') }}" title="{{ 'Go to the homepage of the City of Portland Oregon'|t }}" rel="home" class="navbar-brand d-flex align-items-center">
-      {% if site_logo %}
-        <img src="{{ site_logo }}" alt="{{ 'Portland Oregon'|t }}" class="img-fluid" />
-      {% endif %}
-      {{ site_name }}
-    </a>
-  {% endif %}
-  {% if site_slogan %}
-    <div class="d-inline-block align-top site-name-slogan">
-      {{ site_slogan }}
-    </div>
-  {% endif %}
+{% if site_logo or site_name %}
+  <a href="{{ path('<front>') }}" title="{{ 'Go to the homepage of the City of Portland Oregon'|t }}" rel="home" class="navbar-brand d-flex align-items-center">
+    {% if site_logo %}
+      <img src="{{ site_logo }}" alt="{{ 'Portland Oregon'|t }}" class="img-fluid" />
+    {% endif %}
+    {{ site_name }}
+  </a>
+{% endif %}
+{% if site_slogan %}
+  <div class="d-inline-block align-top site-name-slogan">
+    {{ site_slogan }}
+  </div>
+{% endif %}
