--- a/web/themes/custom/cloudy/templates/layout/page.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/page.html.twig
@@ -50,7 +50,7 @@
       {{ page.header }}
       {% if page.primary_menu or page.header_form %}
         <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#CollapsingNavbar" aria-controls="CollapsingNavbar" aria-expanded="false" aria-label="{{ 'Toggle navigation'|t }}">{{ 'Menu'|t }}</button>
-        <div class="collapse navbar-collapse justify-content-end" id="CollapsingNavbar">
+        <div class="collapse navbar-collapse justify-content-end h-100" id="CollapsingNavbar">
           {{ page.primary_menu }}
           {% set header_form = page.header_form|render %}
           {% if header_form %}
