--- a/web/themes/custom/cloudy/templates/navigation/menu--main.html.twig
+++ b/web/themes/custom/cloudy/templates/navigation/menu--main.html.twig
@@ -1,7 +1,7 @@
 {#
 /**
  * @file
- * Bootstrap Barrio's override to display a menu.
+ * Override to display a menu.
  *
  * Available variables:
  * - menu_name: The machine name of the menu.
