--- a/web/themes/custom/cloudy/templates/paragraphs/paragraph--video.html.twig
+++ b/web/themes/custom/cloudy/templates/paragraphs/paragraph--video.html.twig
@@ -1,9 +1,10 @@
-{% extends 'paragraph.html.twig' %}
-{% block content %}
-<figure class="figure">
-  {{ content }}
-  <figcaption class="figure-caption text-center">
-    {{ paragraph.field_caption.value }}
-  </figcaption>
-</figure>
+{% extends 'paragraph.html.twig' %} {% block content %}
+{% if content.field_video.0 %}
+    <figure class="figure">
+      {{ content }}
+      <figcaption class="figure-caption text-center">
+        {{ paragraph.field_caption.value }}
+      </figcaption>
+    </figure>
+{% endif %}
 {% endblock %}
