POWR-658 Add a webkit appearance reset on most inputs

--- a/web/themes/custom/cloudy/scss/_overrides.scss
+++ b/web/themes/custom/cloudy/scss/_overrides.scss
@@ -32,6 +32,14 @@ h1 {
   line-height: $headings-line-height;
 }
 
+input {
+  &:not([type="radio"]),
+  &:not([type="checkbox"]) {
+    -webkit-appearance: none;
+    border-radius: 0;
+  }
+}
+
 /* COLORS
 --------------------------------------------------*/
 
