POWR-658 Switch to positive logic in selector for webkit reset

--- a/web/themes/custom/cloudy/scss/_overrides.scss
+++ b/web/themes/custom/cloudy/scss/_overrides.scss
@@ -33,10 +33,9 @@ h1 {
 }
 
 input {
-  &:not([type="radio"]),
-  &:not([type="checkbox"]) {
+  &[type="text"],
+  &[type="search"], {
     -webkit-appearance: none;
-    border-radius: 0;
   }
 }
 
