--- a/web/themes/custom/cloudy/scss/components/_header.scss
+++ b/web/themes/custom/cloudy/scss/components/_header.scss
@@ -60,12 +60,12 @@
     }
   }
   .navbar-toggler {
-    padding: 26.5px 1rem;
-    line-height: 27px;
+    padding: 1.5rem 1rem;
+    line-height: 1.5rem;
     color: $white;
   }
   .navbar-nav .nav-link {
-    padding: 1.5rem 1rem;
+    padding: 1rem 0rem;
     color: $white;
     @include links($white, $white, $white, $white);
   }
@@ -74,17 +74,16 @@
 @include media-breakpoint-up(lg) {
   .navbar {
     .navbar-nav .nav-link {
-      min-height: 85px;
+      padding: 1.5rem 1rem;
       transition: background-color 0.25s ease, font-size 0.25s ease;
       &:hover {
         background-color: rgba($black, 0.15);
       }
+      &.active {
+        background-color: $main-menu-active-bg;
+      }
     }
   }
-}
-
-.menu--main .nav-item a.is-active {
-  background-color: $main-menu-active-bg;
 }
 
 .featured-top {
