POWR-658 Move mobile styling to regions

--- a/web/themes/custom/cloudy/templates/layout/page.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/page.html.twig
@@ -54,7 +54,7 @@
           {{ page.primary_menu }}
           {% set header_form = page.header_form|render %}
           {% if header_form %}
-            <div class="form-inline navbar-form my-3 mx-0 my-lg-0 mx-lg-2">
+            <div class="form-inline navbar-form">
               {{ page.header_form }}
             </div>
           {% endif %}
