POWR-664 - changed .ui-dialog position to fixed because absolute was causing dialogs to appear partially offscreen (top) on very long pages; the positioning script is not correctly calculating page height.

--- a/web/themes/custom/cloudy/scss/_overrides.scss
+++ b/web/themes/custom/cloudy/scss/_overrides.scss
@@ -385,3 +385,10 @@ issue is caused by inheriting .button */
 .paragraphs-dropdown-actions {
   background-color: $primary;
 }
+
+
+/* UI Dialog - changed position to fixed, because relative was causing dialog to appear
+   partially offscreen (top) on very long pages. */
+.ui-dialog {
+  position: fixed;
+}
