POWR-664 re-inserted code that displays icon and file size in document entity default display; updated file_size_string twig extension function to include parenthesis if populated and output empty string if no bytes data.

--- a/web/themes/custom/cloudy/templates/field/field--media--field-document.html.twig
+++ b/web/themes/custom/cloudy/templates/field/field--media--field-document.html.twig
@@ -78,7 +78,7 @@
         <div{{ item.attributes.addClass(item_classes) }}>
 
           <a href="{{ file_url(item.content['#file'].getFileUri) }}">{{ file_icon_markup(item.content['#file'].getMimeType) }} 
-            {{ item.content['#file'].getFilename }}</a> ({{ file_size_string(item.content['#file'].getSize) }})
+            {{ item.content['#file'].getFilename }}</a> {{ file_size_string(item.content['#file'].getSize) }}
 
         </div>
       {%- endfor -%}
