--- a/web/themes/custom/cloudy/templates/paragraphs/paragraph--document.html.twig
+++ b/web/themes/custom/cloudy/templates/paragraphs/paragraph--document.html.twig
@@ -10,6 +10,6 @@
 {% if (content.field_document.0) %}
 <a href="{{ url }}">
 {{ icon|raw }} {{ paragraph.field_document.entity.getName() }}
-</a> ({{ size }})
+</a> {{ size }}
 {% endif %}
 {% endblock %}
