POWR-663 Added unpublished badge to media paragraphs; a couple style tweaks

--- a/web/themes/custom/cloudy/templates/paragraphs/paragraph--image.html.twig
+++ b/web/themes/custom/cloudy/templates/paragraphs/paragraph--image.html.twig
@@ -1,11 +1,14 @@
 {% extends 'paragraph.html.twig' %}
 {% block content %}
 {% if content.field_image.0 %}
-<figure class="figure">
-  {{ content }}
-  <figcaption class="figure-caption text-center">
-    {{ paragraph.field_caption.value }}
-  </figcaption>
-</figure>
+  {% if (not content.field_image.0['#media'].isPublished()) %}
+    <span class="badge badge-danger image-unpublished">Unpublished</span>
+  {% endif %}
+  <figure class="figure">
+    {{ content }}
+    <figcaption class="figure-caption text-center">
+      {{ paragraph.field_caption.value }}
+    </figcaption>
+  </figure>
 {% endif %}
 {% endblock %}
