--- a/web/themes/custom/cloudy/templates/paragraphs/paragraph--audio.html.twig
+++ b/web/themes/custom/cloudy/templates/paragraphs/paragraph--audio.html.twig
@@ -1,6 +1,9 @@
 {% extends 'paragraph.html.twig' %}
 {% block content %}
 {% if content.field_video.0 %}
+  {% if (not content.field_video.0['#media'].isPublished()) %}
+    <span class="badge badge-danger audio-unpublished">Unpublished</span>
+  {% endif %}
 <figure class="figure">
   {{ content }}
   <figcaption class="figure-caption text-center">
