--- a/web/themes/custom/cloudy/templates/paragraphs/paragraph--document.html.twig
+++ b/web/themes/custom/cloudy/templates/paragraphs/paragraph--document.html.twig
@@ -3,8 +3,9 @@
 {# drawing document properties directly from paragraph object bypasses permissions checks, so
    we need to check the content of the field in the content object before displaying it #}
 {% if (content.field_document.0) %}
-<a href="{{ fileUrl }}">
-<i class="fas fa-{{ fontawesomeIcon }}"></i> {{ paragraph.field_document.entity.getName() }}
-</a> ({{ fileSize }})
+  {% if (not content.field_document.0['#media'].isPublished()) %}
+    <span class="badge badge-danger document-unpublished">Unpublished</span>
+  {% endif %}
+  <a href="{{ fileUrl }}"><i class="fas fa-{{ fontawesomeIcon }}"></i> {{ paragraph.field_document.entity.getName() }}</a> ({{ fileSize }})
 {% endif %}
 {% endblock %}
