POWR-649 Add paragraphs sass file and modify paragraph type display

--- a/web/themes/custom/cloudy/scss/_components.scss
+++ b/web/themes/custom/cloudy/scss/_components.scss
@@ -14,6 +14,7 @@
 @import "components/_item-list";
 @import "components/_list-group";
 @import "components/_nav";
+@import "components/paragraphs";
 @import "components/_site-footer";
 @import "components/_skip-link";
 @import "components/_tables";
