POWR-663 fixed conditional logic to return desired result

--- a/web/themes/custom/cloudy/templates/paragraphs/paragraph--image.html.twig
+++ b/web/themes/custom/cloudy/templates/paragraphs/paragraph--image.html.twig
@@ -2,7 +2,7 @@
 {% block content %}
 {% if content.field_image.0 %}
   <figure class="figure">
-    {% if (not content.field_image.0['#media'].isPublished()) %}
+    {% if (content.field_image.0['#media'].isPublished() is same as(FALSE)) %}
       <span class="badge badge-danger image-unpublished">Unpublished</span>
     {% endif %}
     {{ content }}
