--- a/web/themes/custom/cloudy/templates/paragraphs/paragraph--video.html.twig
+++ b/web/themes/custom/cloudy/templates/paragraphs/paragraph--video.html.twig
@@ -2,7 +2,7 @@
 {% block content %}
 {% if content.field_video.0 %}
   <figure class="figure">
-    {% if (not content.field_video.0['#media'].isPublished()) %}
+    {% if (content.field_video.0['#media'].isPublished() is same as(FALSE)) %}
       <span class="badge badge-danger video-unpublished">Unpublished</span>
     {% endif %}
     {{ content }}
