POWR-661 Add icon to revision state block

--- a/web/modules/custom/portland/templates/block--portland-revision-block.html.twig
+++ b/web/modules/custom/portland/templates/block--portland-revision-block.html.twig
@@ -6,6 +6,7 @@
 #}
  <div class="portland-revision--block alert alert-{{ severity }} border border-{{ severity }}">
     {# <h1>{{ title }}</h1> #}
+    <span class="fas fa-lg fa-{{ revision_state_icon }} fa-fw"></span>
     <strong>{{ current_revision_state }}</strong> {{ description }}
     <div class="float-right"><a href="{{ revision_link }}">{{ revision_description }}</a></div>
  </div>
