POWR-659 Add styling for paragraph modal buttons

--- a/web/themes/custom/cloudy/scss/components/_paragraphs.scss
+++ b/web/themes/custom/cloudy/scss/components/_paragraphs.scss
@@ -1,4 +1,20 @@
 // widget styles
-.js .paragraph-top .paragraph-type {
-  grid-column: 1 / span 2;
+ul.paragraphs-add-dialog-list {
+  input.field-add-more-submit {
+    background-position: $input-btn-padding-y;
+    background-size: $font-size-base;
+    padding-left: $font-size-base * 2;
+    border-radius: $border-radius;
+  }
+}
+
+.js {
+  .paragraph-top {
+    .paragraph-type {
+      grid-column: 1 / span 2;
+    }
+  }
+  .paragraph-type-add-modal-button:hover {
+    background-color: darken($primary, 5%);
+  }
 }
