POWR-659 Add new sass components

--- a/web/themes/custom/cloudy/scss/_components.scss
+++ b/web/themes/custom/cloudy/scss/_components.scss
@@ -3,6 +3,7 @@
 @import "components/_breadcrumb";
 @import "components/_card";
 @import "components/_columns";
+@import "components/dialog";
 @import "components/_field";
 @import "components/_file";
 @import "components/_form";
