--- a/web/modules/custom/portland/templates/block--portland-revision-block.html.twig
+++ b/web/modules/custom/portland/templates/block--portland-revision-block.html.twig
@@ -4,9 +4,9 @@
  * Profile Portland revision custom block.
  */
 #}
- <div class="portland-revision--block alert alert-{{ severity }} border border-{{ severity }}">
+ <div class="portland-revision--block alert alert-{{ alert_color }} border border-{{ alert_color }}">
     {# <h1>{{ title }}</h1> #}
-    <span class="fas fa-lg fa-{{ revision_state_icon }} fa-fw"></span>
-    <strong>{{ current_revision_state }}</strong> {{ description }}
-    <div class="float-right"><a href="{{ revision_link }}">{{ revision_description }}</a></div>
+    <span class="fas fa-lg fa-{{ alert_icon }} fa-fw"></span>
+    <strong>{{ current_revision_state }}</strong> {{ latest_revision_state }}
+    <div class="float-right"><a href="{{ revision_link }}">{{ revision_link_text }}</a></div>
  </div>
