--- a/web/themes/custom/cloudy/scss/components/_field.scss
+++ b/web/themes/custom/cloudy/scss/components/_field.scss
@@ -1,141 +1,162 @@
-
 /**
  * @file
  * Visual styles for Bootstrap Barrio's field components.
  */
 
 .field--type-entity-reference {
-    margin: 0 0 ($spacer * 1.2);
+  margin: 0 0 ($spacer * 1.2);
 }
 
 .field--type-entity-reference .field__label {
-    font-weight: 400;
-    margin: 0;
-    padding-right: ($spacer * .3);
-    /* LTR */
+  font-weight: 400;
+  margin: 0;
+  padding-right: ($spacer * 0.3);
+  /* LTR */
 }
 
-[dir="rtl"] .field--type-entity-reference .field__label {
-    padding-left: ($spacer * .3);
-    padding-right: 0;
+[dir='rtl'] .field--type-entity-reference .field__label {
+  padding-left: ($spacer * 0.3);
+  padding-right: 0;
 }
 
 .field--type-entity-reference ul.links {
-    padding: 0;
-    margin: 0;
-    list-style: none;
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
 
 .field--type-entity-reference ul.links li {
-    float: left;
-    /* LTR */
-    padding: 0 $spacer 0 0;
-    /* LTR */
-    white-space: nowrap;
+  float: left;
+  /* LTR */
+  padding: 0 $spacer 0 0;
+  /* LTR */
+  white-space: nowrap;
 }
 
-[dir="rtl"] .field--type-entity-reference ul.links li {
-    padding: 0 0 0 $spacer;
-    float: right;
+[dir='rtl'] .field--type-entity-reference ul.links li {
+  padding: 0 0 0 $spacer;
+  float: right;
 }
 
 @media all and (min-width: 560px) {
-    .node .field--type-image {
-        float: left;
-        /* LTR */
-        margin: 0 $spacer 0 0;
-        /* LTR */
-    }
-    [dir="rtl"] .node .field--type-image {
-        float: right;
-        margin: 0 0 0 $spacer;
-    }
-    .node .field--type-image+.field--type-image {
-        clear: both;
-    }
+  .node .field--type-image {
+    float: left;
+    /* LTR */
+    margin: 0 $spacer 0 0;
+    /* LTR */
+  }
+  [dir='rtl'] .node .field--type-image {
+    float: right;
+    margin: 0 0 0 $spacer;
+  }
+  .node .field--type-image + .field--type-image {
+    clear: both;
+  }
 }
 
 .field--type-image img,
 .field--name-field-user-picture img {
-    margin: 0 0 $spacer;
-    width: 100%;
+  margin: 0 0 $spacer;
+  width: 100%;
 }
 
 .field--type-image a {
-    border-bottom: none;
+  border-bottom: none;
 }
 
 .field--name-field-tags {
-    margin: 0 0 ($spacer * 1.2);
+  margin: 0 0 ($spacer * 1.2);
 }
 
 .field--name-field-tags .field__label {
-    font-weight: 400;
-    margin: 0;
-    padding-right: 5px;
-    /* LTR */
+  font-weight: 400;
+  margin: 0;
+  padding-right: 5px;
+  /* LTR */
 }
 
-[dir="rtl"] .field--name-field-tags .field__label {
-    padding-left: 5px;
-    padding-right: 0;
+[dir='rtl'] .field--name-field-tags .field__label {
+  padding-left: 5px;
+  padding-right: 0;
 }
 
 .field--name-field-tags .field__label,
 .field--name-field-tags ul.links {
-    font-size: $font-size-sm;
+  font-size: $font-size-sm;
 }
 
 .node--view-mode-teaser .field--name-field-tags .field__label,
 .node--view-mode-teaser .field--name-field-tags ul.links {
-    font-size: $font-size-sm;
+  font-size: $font-size-sm;
 }
 
 .field--name-field-tags ul.links {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
 .field--name-field-tags ul.links li {
-    float: left;
-    /* LTR */
-    padding: 0 $spacer 0 0;
-    /* LTR */
-    white-space: nowrap;
+  float: left;
+  /* LTR */
+  padding: 0 $spacer 0 0;
+  /* LTR */
+  white-space: nowrap;
 }
 
-[dir="rtl"] .field--name-field-tags ul.links li {
-    padding: 0 0 0 $spacer;
-    float: right;
+[dir='rtl'] .field--name-field-tags ul.links li {
+  padding: 0 0 0 $spacer;
+  float: right;
 }
 
 .field--label-inline .field__label,
 .field--label-inline .field__item {
-    display: inline-block
+  display: inline-block;
 }
-
 
 @media all and (min-width: 560px) {
-    .image-align {
-        max-width: 50%;
-    }
-    .video-align {
-        width: 50%;
-    }
-    .quote-align {
-        width: 50%;
-    }
+  .image-align {
+    max-width: 50%;
+  }
+  .video-align {
+    width: 50%;
+  }
+  .quote-align {
+    width: 50%;
+  }
 }
 @media all and (max-width: 560px) {
-    .image-align, .video-align, .quote-align{
-        width: 100%;
-    }
+  .image-align,
+  .video-align,
+  .quote-align {
+    width: 100%;
+  }
 }
 
-div.paragraph--type--video figure.figure, div.paragraph--type--audio figure.figure {
-    width: 100%;
+div.paragraph--type--video figure.figure,
+div.paragraph--type--audio figure.figure {
+  width: 100%;
 }
 
 span.postal-code {
-    padding-left: $spacer * 0.5;
+  padding-left: $spacer * 0.5;
+}
+
+.draggable {
+  .field-multiple-drag {
+    a.tabledrag-handle {
+      padding: $btn-padding-y $btn-padding-x;
+      margin: 0;
+      float: none;
+      height: unset;
+      display: flex;
+      .handle {
+        padding: 0;
+        margin: 0;
+        height: $font-size-lg;
+        width: $font-size-lg;
+        background-size: contain;
+        background-position: center;
+      }
+    }
+  }
 }
