--- a/web/themes/custom/cloudy/templates/content/groups/group--program--teaser.html.twig
+++ b/web/themes/custom/cloudy/templates/content/groups/group--program--teaser.html.twig
@@ -1,4 +1,4 @@
-<div class="teaser">
+<div class="teaser d-flex flex-column align-items-start mb-5">
   <h3>
     <a href="{{ url }}" rel="bookmark">
       {{ label }}</a>
@@ -18,7 +18,7 @@
                 url: path('entity.taxonomy_term.canonical', {'taxonomy_term': node.field_topics[i].entity.id}),
                 title: node.field_topics[i].entity.name.value,
               }%}
-            <a href="{{ topic.url }}" class="teaser__tag">
+            <a href="{{ topic.url }}" class="teaser__tag small">
               {{ topic.title }}</a>
           {% endif %}
         {% endfor %}
@@ -28,7 +28,7 @@
                 url: path('entity.taxonomy_term.canonical', {'taxonomy_term': node.field_audience[i].entity.id}),
                 title: node.field_audience[i].entity.name.value,
               }%}
-            <a href="{{ audience.url }}" class="teaser__tag">
+            <a href="{{ audience.url }}" class="teaser__tag small">
               {{ audience.title }}</a>
           {% endif %}
         {% endfor %}
