POWR-659 Style drop button add paragraph widget Prettier quote changes as well

--- a/web/themes/custom/cloudy/scss/components/_paragraphs.scss
+++ b/web/themes/custom/cloudy/scss/components/_paragraphs.scss
@@ -9,6 +9,14 @@ ul.paragraphs-add-dialog-list {
 }
 
 .js {
+  .field--widget-paragraphs {
+    .dropbutton-widget {
+      position: static;
+      background-color: $brand-primary;
+      color: $white;
+      border-radius: $btn-border-radius;
+    }
+  }
   .paragraph-top {
     .paragraph-type {
       grid-column: 1 / span 2;
