POWR-659 Add important to table cell padding so paragraph widgets retain

--- a/web/themes/custom/cloudy/scss/components/_tables.scss
+++ b/web/themes/custom/cloudy/scss/components/_tables.scss
@@ -57,7 +57,7 @@ th {
   vertical-align: middle;
 }
 td {
-  padding: 10px 12px;
+  padding: 10px 12px !important;
   text-align: left; /* LTR */
 }
 [dir="rtl"] td {
