POWR-659 Add a border radius to details elements Prettier quote changes

--- a/web/themes/custom/cloudy/scss/_overrides.scss
+++ b/web/themes/custom/cloudy/scss/_overrides.scss
@@ -11,7 +11,7 @@ Description: Bootstrap 4 with Sass
 /* GENERAL STYLES
 -------------------------------------------------*/
 body {
-    background: $white;
+  background: $white;
 }
 
 p {
@@ -33,62 +33,66 @@ h1 {
 }
 
 input {
-  &[type="text"],
-  &[type="search"], {
+  &[type='text'],
+  &[type='search'] {
     -webkit-appearance: none;
   }
+}
+
+details {
+  border-radius: $border-radius;
 }
 
 /* COLORS
 --------------------------------------------------*/
 
 a {
-    color: $link-color;
+  color: $link-color;
 }
 
 .bg-inverse {
-    background: $primary;
+  background: $primary;
 }
 
 .site-footer {
-    background: $gray-100;
+  background: $gray-100;
 }
 
 .menu--main li a {
-    color: $secondary;
+  color: $secondary;
 }
 
 .menu--account li a {
-    color: $secondary;
+  color: $secondary;
 }
 
 .site-name-slogan a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .card-group img {
-    margin: 0;
-    width: 100%;
-    height: auto;
+  margin: 0;
+  width: 100%;
+  height: auto;
 }
 
 .card-group .field--type-image {
-    margin: 0
+  margin: 0;
 }
 
 .slick {
-    width: 100%;
+  width: 100%;
 }
 
-.slick>div {
-    margin: 0 15px;
+.slick > div {
+  margin: 0 15px;
 }
 
 // Groups
 .view-group-media-banner,
 .view-group-content-banner,
 .view-group-banner {
-  padding: .5rem 1rem;
+  padding: 0.5rem 1rem;
 }
 
 .view-group-media-banner .views-row,
@@ -129,7 +133,7 @@ a {
 // Site name
 
 .site-name-slogan a {
-    color:#ffffff;
+  color: #ffffff;
 }
 
 // Service steps
@@ -146,7 +150,6 @@ li.step {
   margin-bottom: 1rem;
 }
 
-
 li.step {
   &:before {
     content: counter(step-counter);
@@ -157,7 +160,7 @@ li.step {
     border: 1px #909090 solid;
     color: #505050;
     font-weight: 400;
-    padding: .3rem 1rem;
+    padding: 0.3rem 1rem;
     border-radius: 50%;
   }
   > * {
@@ -169,12 +172,17 @@ li.step {
   }
 }
 
-ol.steps dl, ol.steps ol, ol.steps ul {
+ol.steps dl,
+ol.steps ol,
+ol.steps ul {
   margin-top: 0;
   margin-bottom: 1rem;
 }
 
-ol.steps ol ol, ol.steps ol ul, ol.steps ul ol, ol.steps ul ul {
+ol.steps ol ol,
+ol.steps ol ul,
+ol.steps ul ol,
+ol.steps ul ul {
   margin-bottom: 0;
 }
 
@@ -196,7 +204,8 @@ ol.steps ol ol, ol.steps ol ul, ol.steps ul ol, ol.steps ul ul {
     background-color: darken($primary, 5%);
     border: none;
   }
-  &:focus, &:not(:disabled):not(.disabled):active:focus {
+  &:focus,
+  &:not(:disabled):not(.disabled):active:focus {
     box-shadow: none;
   }
 }
@@ -205,20 +214,21 @@ ol.steps ol ol, ol.steps ol ul, ol.steps ul ol, ol.steps ul ul {
   @extend .btn;
   @extend .btn-outline-primary;
   @extend .btn-lg;
-  &:focus, &:not(:disabled):not(.disabled):active:focus {
+  &:focus,
+  &:not(:disabled):not(.disabled):active:focus {
     box-shadow: none;
   }
 }
 
-*[class*="btn--"]:before {
+*[class*='btn--']:before {
   display: inline-block;
   padding-right: 0.5rem;
   vertical-align: middle;
 }
 
 .btn--download:before {
-  font-family: "Font Awesome 5 Free";
-  content: "\f019";
+  font-family: 'Font Awesome 5 Free';
+  content: '\f019';
 }
 
 .btn--fax:not(.disabled):hover {
@@ -226,7 +236,7 @@ ol.steps ol ol, ol.steps ol ul, ol.steps ul ol, ol.steps ul ul {
 }
 
 .form-actions button.btn {
-  margin-right: .5rem;
+  margin-right: 0.5rem;
 }
 
 // Form buttons
@@ -238,7 +248,7 @@ form .btn {
 // Form check input
 
 td .form-check-input {
-    margin-left: 0rem;
+  margin-left: 0rem;
 }
 
 // Homepage customizations
@@ -254,13 +264,13 @@ td .form-check-input {
 }
 
 .topic {
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
 .topic h3 {
   font-size: $font-size-lg;
   font-family: $font-family-sans-serif;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
 .topic p {
@@ -268,7 +278,8 @@ td .form-check-input {
 }
 
 .block-copyright-block {
-  background:url(/themes/custom/cloudy/images/city-seal.png) no-repeat bottom right;
+  background: url(/themes/custom/cloudy/images/city-seal.png) no-repeat bottom
+    right;
   width: 100%;
   min-height: 200px;
 }
@@ -290,12 +301,12 @@ td .form-check-input {
   align-items: bottom !important;
 }
 
-.block-copyright-block p{
+.block-copyright-block p {
   float: right;
   text-align: right;
 }
 
-.layout-main-wrapper{
+.layout-main-wrapper {
   margin-top: 1.25rem;
 }
 
@@ -307,7 +318,8 @@ ul.pagination {
   margin-top: 1rem;
 }
 
-.created, .updated {
+.created,
+.updated {
   color: #505050;
 }
 
@@ -334,7 +346,7 @@ span.ext {
 }
 
 span.mailto::before {
-  background:none;
+  background: none;
 }
 
 /* Hide the extra spans when printing. */
@@ -348,11 +360,11 @@ span.mailto::before {
 
 /* Add some margin on floated images */
 
-.float-left .figure{
+.float-left .figure {
   margin-right: 2rem;
 }
 
-.float-right .figure{
+.float-right .figure {
   margin-left: 2rem;
 }
 
@@ -370,7 +382,19 @@ span.mailto::before {
   padding-right: 0;
 }
 
-h2, h3, h4, h5, h6, p, blockquote, hr, .list-group-item, .paragraph ul, .paragraph ol, .figure-caption, .teaser__tags {
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+hr,
+.list-group-item,
+.paragraph ul,
+.paragraph ol,
+.figure-caption,
+.teaser__tags {
   max-width: 729px;
 }
 
@@ -385,7 +409,6 @@ issue is caused by inheriting .button */
 .paragraphs-dropdown-actions {
   background-color: $primary;
 }
-
 
 /* UI Dialog - changed position to fixed, because relative was causing dialog to appear
    partially offscreen (top) on very long pages. */
