POWR-666 Add template for popular field and enable on service teaser display mode

--- a/web/themes/custom/cloudy/templates/content/city-service/node--city-service--teaser.html.twig
+++ b/web/themes/custom/cloudy/templates/content/city-service/node--city-service--teaser.html.twig
@@ -3,6 +3,7 @@
     <a href="{{ url }}" rel="bookmark">
       {{ label }}</a>
   </h3>
+  {{ content.field_popular }}
   {% if node.field_summary.value %}
     <div>
       <p>{{ node.field_summary.value }}</p>
