POWR-659 Add a margin beneath the paragraph header

--- a/web/themes/custom/cloudy/scss/components/_paragraphs.scss
+++ b/web/themes/custom/cloudy/scss/components/_paragraphs.scss
@@ -18,6 +18,7 @@ ul.paragraphs-add-dialog-list {
     }
   }
   .paragraph-top {
+    margin-bottom: $spacer;
     .paragraph-type {
       grid-column: 1 / span 2;
     }
