POWR-659 Add some styling to the paragraph type display

--- a/web/themes/custom/cloudy/scss/components/_paragraphs.scss
+++ b/web/themes/custom/cloudy/scss/components/_paragraphs.scss
@@ -21,6 +21,16 @@ ul.paragraphs-add-dialog-list {
     margin-bottom: $spacer;
     .paragraph-type {
       grid-column: 1 / span 2;
+      display: flex;
+      align-items: center;
+      .paragraph-type-icon {
+        margin-right: $spacer * 0.5;
+        height: $font-size-lg;
+        width: $font-size-lg;
+      }
+      .paragraph-type-label {
+        font-size: $font-size-lg;
+      }
     }
   }
   .paragraph-type-add-modal-button:hover {
