POWR-496 install fixed block content and config 404

--- a/web/themes/custom/cloudy/scss/components/_form.scss
+++ b/web/themes/custom/cloudy/scss/components/_form.scss
@@ -12,8 +12,11 @@
    @extend .btn-primary;
  }
 
-.path-frontpage .search-api-page-block-form form,
-.path-search .search-api-page-block-form form {
+.main-content .search-api-page-block-form form {
+  margin: 1rem 0;
+}
+
+.path-front .search-api-page-block-form form{
   margin: 4rem 0 1rem;
 }
 
@@ -27,10 +30,8 @@
   margin: 0;
 }
 
-.path-frontpage .form-search,
-.path-search .form-search, 
-.path-frontpage .form-action,
-.path-search .form-action {
+.main-content .form-search,
+.main-content .form-action {
   @extend .form-control-lg;
   flex: 1 1 auto;
 }
@@ -60,8 +61,7 @@
   margin: 0;
 }
 
-.path-frontpage .form-submit,
-.path-search .form-submit {
+.main-content .form-submit{
   padding: 0 2rem;
 }
 
