POWR-667 new module for adding media type specific classes to entity embeds, custom entity embed templates, entity browser view that combines video and audio, style tweaks

--- a/web/themes/custom/cloudy/scss/components/_media.scss
+++ b/web/themes/custom/cloudy/scss/components/_media.scss
@@ -4,18 +4,12 @@
  * Media items, typically embedded.
  */
 
-figure.align-right, figure.align-left {
+/* "embed-image" and "embed-video" classes are added by module portland_media_embed_classes */
+figure.embed-image.align-right {
+    max-width: 50%;
+    margin-left: 2rem;
+}
+figure.embed-video.align-right {
   width: 50%;
-}
-
-article.media--type-video, article.media--type-audio {
-  width: 100%;
-}
-
-figure.caption {
-  display: block;
-}
-
-.caption > figcaption { 
-  display: block;
+  margin-left: 2rem;
 }
