POWR-667 incremental update, includes config updates to support previous changes and uninstalled portland_html_cleaner module.

--- a/web/themes/custom/cloudy/templates/field/field--media--document.html.twig
+++ b/web/themes/custom/cloudy/templates/field/field--media--document.html.twig
@@ -69,11 +69,12 @@
   <div{{ attributes.addClass(field_classes).addClass(classes) }}>
     {% block content %}
       {%- for item in items -%}
+        {{ kint(item) }}
         <div{{ item.attributes.addClass(item_classes) }}>
-          <a href="{{ file_url(item.content['#file'].getFileUri) }}">
-            {{ file_icon_markup(item.content['#file'].getMimeType) }}
-            {{ item.content['#file'].getFilename }}</a>
-          {{ file_size_string(item.content['#file'].getSize) }}
+          <a href="{{ file_url(item.content.0['#file'].getFileUri) }}">
+            {{ file_icon_markup(item.content.0['#file'].getMimeType) }}
+            {{ item.content.0['#file'].getFilename }}</a>
+          {{ file_size_string(item.content.0['#file'].getSize) }}
         </div>
       {%- endfor -%}
     {% endblock %}
