POWR-717 frontpage typo

--- a/web/themes/custom/cloudy/scss/components/_form.scss
+++ b/web/themes/custom/cloudy/scss/components/_form.scss
@@ -16,7 +16,7 @@
   margin: 1rem 0;
 }
 
-.path-front .search-api-page-block-form form{
+.path-frontpage .search-api-page-block-form form{
   margin: 4rem 0 1rem;
 }
 
