POWR-659 Refactor search block Sass

--- a/web/themes/custom/cloudy/scss/_components.scss
+++ b/web/themes/custom/cloudy/scss/_components.scss
@@ -18,6 +18,7 @@
 @import 'components/_media';
 @import 'components/_nav';
 @import 'components/paragraphs';
+@import 'components/search';
 @import 'components/_site-footer';
 @import 'components/_skip-link';
 @import 'components/_tables';
