--- a/web/themes/custom/cloudy/templates/field/field--paragraph--field-step-by-step-instructions.html.twig
+++ b/web/themes/custom/cloudy/templates/field/field--paragraph--field-step-by-step-instructions.html.twig
@@ -9,14 +9,30 @@
  * @see field.html.twig
  */
 #}
-
+{%
+  set search_keys = [
+    'field_step_title',
+    'field_step_instruction',
+    'field_step_action',
+  ]
+%}
 {% if items|length == 1 %}
-  <div class="onestep">{{ items[0].content }}</div>
-{% else %}
+  <div class="onestep">
+    {{ items[0].content }}
+  </div>
+  {% else %}
   <ol class="steps">
     {%- for item in items -%}
-      <li class="step">{{ item.content }}</li>
+      {% set paragraph = item.content['#paragraph'] %}
+      {% set has_content = false %}
+      {% for key, p in paragraph if key in search_keys and p.value is not empty %}
+        {% set has_content = true %}
+      {% endfor %}
+      {% if has_content %}
+        <li class="step">
+          {{ item.content }}
+        </li>
+      {% endif %}
     {%- endfor -%}
   </ol>
 {% endif %}
-
