POWR-650 Add sass to unbreak preview links from DOM flow Add spacing in line with other elements

--- a/web/themes/custom/cloudy/scss/_overrides.scss
+++ b/web/themes/custom/cloudy/scss/_overrides.scss
@@ -392,3 +392,8 @@ issue is caused by inheriting .button */
 .ui-dialog {
   position: fixed;
 }
+
+.node-preview-container {
+  position: static;
+  padding: ($spacer / 2) $spacer;
+}
