POWR-630 updates to homepage term lists

--- a/web/themes/custom/cloudy/scss/_overrides.scss
+++ b/web/themes/custom/cloudy/scss/_overrides.scss
@@ -245,7 +245,7 @@ td .form-check-input {
 
 .view-community-actions .icon,
 .view-audiences-homepage .icon {
-  font-size: 3rem;
+  font-size: 2rem;
 }
 
 .view-community-actions .list-group-item-action,
@@ -254,6 +254,7 @@ td .form-check-input {
 }
 
 .topic {
+  height: 4rem;
   margin-bottom: .5rem;
 }
 
