POWR-667 Added media--document--embedded template in order to display icon and filesize when embedding documents, removed outdated template, added preprocess function to theme to get document url.

--- a/web/themes/custom/cloudy/templates/field/field--media--field-document.html.twig
+++ b/web/themes/custom/cloudy/templates/field/field--media--field-document.html.twig
@@ -36,6 +36,10 @@
  * @see template_preprocess_field()
  */
 #}
+
+{#
+NOTE: This template is required to render document file link, with icon and file size, on document entity page default display.
+#}
 {% set margin = margin|default('0') %}
 
 {% set classes = classes|default([]) %}
