POWR-719 added unpublished badge to embedded documents

--- a/web/themes/custom/cloudy/templates/content/media--document--embedded.html.twig
+++ b/web/themes/custom/cloudy/templates/content/media--document--embedded.html.twig
@@ -23,6 +23,9 @@
 <article{{ attributes.addClass(classes) }}>
   {{ title_suffix.contextual_links }}
   {% if content %}
+    {% if (media.isPublished() is same as(FALSE)) %}
+    <span class="badge badge-danger document-unpublished">Unpublished</span>
+    {% endif %}
     <a href="{{ document_url }}">{{ file_icon_markup(media.field_mime_type.0.value) }} {{ name }}</a>
     {{ file_size_string(media.field_file_size.0.value) }}
   {% endif %}
