POWR-733 add roles, config, templates, etc

--- a/web/themes/custom/cloudy/scss/components/_form.scss
+++ b/web/themes/custom/cloudy/scss/components/_form.scss
@@ -19,3 +19,21 @@
 .views-exposed-form .form-actions {
   @extend .align-self-end;
 }
+
+form .description,
+form .counter {
+  display: block;
+  margin-bottom: $spacer;
+  font-size: $font-size-sm;
+}
+
+form label {
+  @extend .h5;
+}
+
+.entity-content-form-footer {
+  border: $border-width solid $gray-300;
+  padding: ($spacer * 1.5);
+  margin-bottom: ($spacer * 2) !important;
+  background-color: $gray-100;
+}
