--- a/web/themes/custom/cloudy/scss/components/_help.scss
+++ b/web/themes/custom/cloudy/scss/components/_help.scss
@@ -4,7 +4,8 @@
  */
 
 .block-help {
-    border: $border-width solid $border-color;
-    padding: 0 ($spacer * 1.5);
-    margin-bottom: ($spacer * 2);
+    border: $border-width solid $gray-300;
+    padding: ($spacer * 1.5);
+    margin-bottom: ($spacer * 2) !important;
+    background-color: $gray-100;
 }
