POWR-687 Update sass and javascript entrypoints for webpack

--- a/web/themes/custom/cloudy/scss/style.scss
+++ b/web/themes/custom/cloudy/scss/style.scss
@@ -1,20 +1,20 @@
 /* IMPORTS */
 
 // Variables
-@import "bootstrap-overrides";
+@import 'bootstrap-overrides';
 // Theme variables
-@import "theme-variables";
+@import 'theme-variables';
 // Bootstrap
-@import "bootstrap/scss/bootstrap";
+@import '~bootstrap/scss/bootstrap';
 // Mixins
-@import "mixins";
+@import 'mixins';
 // Typography
-@import "typography";
+@import 'typography';
 // Images
-@import "images";
+@import 'images';
 // Icons
-@import "icons";
+@import 'icons';
 // Components
-@import "components";
+@import 'components';
 // Custom
-@import "overrides";
+@import 'overrides';
