--- a/web/themes/custom/cloudy/scss/components/_media.scss
+++ b/web/themes/custom/cloudy/scss/components/_media.scss
@@ -17,7 +17,7 @@
 .image-preview img.image-style-thumbnail {
   max-width: 100px;
 }
-/* "embed-image" and "embed-video" classes are added by module portland_media_embed_classes */
+/* "embed-image" and "embed-video" classes are added by filter portland_media_embed_helper_classes */
 figure.embed-image.align-right {
     max-width: 50%;
     margin-left: 2rem;
