POWR-719 - fixed display issue that resulted from master merge

--- a/web/themes/custom/cloudy/scss/components/_media.scss
+++ b/web/themes/custom/cloudy/scss/components/_media.scss
@@ -18,11 +18,11 @@
   max-width: 100px;
 }
 /* "embed-image" and "embed-video" classes are added by filter portland_media_embed_helper_classes */
-figure.embed-image.align-right {
+.embed-image.align-right {
     max-width: 50%;
     margin-left: 2rem;
 }
-figure.embed-video.align-right {
+.embed-video.align-right {
   width: 50%;
   margin-left: 2rem;
 }
