POWR-734 replaced logo and made the navbar white

--- a/web/themes/custom/cloudy/scss/_theme-variables.scss
+++ b/web/themes/custom/cloudy/scss/_theme-variables.scss
@@ -23,4 +23,4 @@ $comment-spacer-y: 1.25em;
 
 
 $editor-toolbar-active-bg: #000;
-$main-menu-active-bg: darken($primary, 5%);
+$main-menu-active-bg: darken(#fff, 5%);
