--- a/web/themes/custom/cloudy/scss/_components.scss
+++ b/web/themes/custom/cloudy/scss/_components.scss
@@ -1,5 +1,6 @@
 @import 'components/_affix';
 @import 'components/_alerts';
+@import 'components/_badge';
 @import 'components/_breadcrumb';
 @import 'components/_card';
 @import 'components/_columns';
