--- a/web/themes/custom/cloudy/scss/components/_header.scss
+++ b/web/themes/custom/cloudy/scss/components/_header.scss
@@ -39,7 +39,9 @@
 }
 
 .header {
-    background-color: $brand-primary;
+  background-color: $white;
+  border-bottom: 1px solid rgba(6, 57, 107, 0.125);
+  box-shadow: 0px 1px 20px rgba(6, 57, 107, 0.1);
 }
 
 .banner {
@@ -53,18 +55,18 @@
   padding: 0 1rem;
   .navbar-brand {
     img {
-      max-width: 175px;
+      max-width: 300px;
     }
   }
   .navbar-toggler {
     padding: 1.5rem 1rem;
     line-height: 1.5rem;
-    color: $white;
+    color: $black;
   }
   .navbar-nav .nav-link {
     padding: 1rem 0rem;
-    color: $white;
-    @include links($white, $white, $white, $white);
+    color: $black;
+    @include links($black, $black, $black, $black);
   }
 }
 
